# game-engine

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FUTURE.md  Makefile  README.md  vcpkg.json
.github/: copilot-instructions.md
engine/src/: Engine.h
engine/src/Core/: Application.cpp  Application.h  EntryPoint.h  Scene.h
engine/src/Entity/: Entity.h  GridEntity.cpp  GridEntity.h  GridTile.h  TextEntity.cpp  TextEntity.h  Tile.h
engine/src/Events/: Event.h  Subscription.h
engine/src/Graphics/: Color.cpp  Color.h
engine/src/Input/: Keyboard.cpp  Keyboard.h  Mouse.cpp
engine/src/Math/: Vec2.cpp
engine/src/Patterns/Command/: CommandQueue.h
engine/src/Rendering/: BitmapFont.cpp  BitmapFont.h  Camera2D.cpp  Camera2D.h  Renderer2D.cpp  Renderer2D.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h  Window.cpp  Window.h
engine/src/Resources/: Resource.h  ResourceManager.cpp  ResourceManager.h
engine/src/Utilities/: Timer.cpp  Timer.h
engine/src/World/: Grid.cpp  Grid.h  GridCoordinateSystem.h  TileMap.cpp
games/Chess/src/: Chess.cpp  Chess.h  ChessBoard.h  ChessConstants.h  ChessTypes.h  CursorEntity.cpp
games/Chess/src/Pieces/: Bishop.cpp  Bishop.h  ChessPiece.cpp  ChessPiece.h  ChessPieces.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
games/Platformer/src/: Cursor.cpp  Cursor.h  Falcon.cpp  Falcon.h  PlatformTile.h  Platformer.cpp  Platformer.h  PlatformerConstants.h  PlatformerData.h  PlatformerInputManager.cpp  PlatformerInputManager.h  PlatformerWorld.cpp  PlatformerWorld.h  Player.cpp  Player.h  TileType.h
games/Platformer/src/Levels/: LevelData.h  Levels.h
games/Snake/src/: Player.h  SnakeConstants.h
games/Snake/src/Commands/: MovementCommands.h  MovementInputHandler.cpp  MovementInputHandler.h
references/: GODOT-ARCHITECTURE.md  HAZEL-ARCHITECTURE.md  QUAKE-ARCHITECTURE.md  SOURCE-SDK-ARCHITECTURE.md
src/: main.cpp
src/Chess/: Chess.cpp  Chess.h  ChessBoard.cpp  ChessBoard.h  ChessConstants.h  ChessTile.cpp  ChessTile.h  CursorEntity.h  InputManager.cpp  InputManager.h
src/Chess/Pieces/: Bishop.cpp  Bishop.h  ChessPiece.cpp  ChessPiece.h  ChessPieces.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/Engine/: Application.cpp  Application.h  Engine.h
src/Engine/Core/: Application.cpp  Application.h  Scene.cpp  Scene.h
src/Engine/Entity/: Entity.cpp  Entity.h  GridEntity.h  GridTile.cpp  GridTile.h  Tile.cpp
src/Engine/Events/: Subscription.cpp
src/Engine/Graphics/: Color.cpp  Color.h
src/Engine/Input/: KeyCodes.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  MouseCodes.h
src/Engine/Math/: Vec2.cpp  Vec2.h
src/Engine/Patterns/Command/: Command.h  CommandQueue.cpp  CommandQueue.h
src/Engine/Rendering/: Camera2D.cpp  Camera2D.h  Renderer2D.cpp  Renderer2D.h  Window.cpp  Window.h
src/Engine/Types/: TypeRegistrationMacros.h  TypeRegistry.cpp  TypeRegistry.h
src/Engine/Utilities/: Timer.cpp  Timer.h
src/Engine/World/: Grid.cpp  Grid.h  GridCoordinateSystem.cpp  GridCoordinateSystem.h  TileMap.h
src/Game/: Entity.h  Food.cpp  Food.h  Game.cpp  Game.h  GameConstants.h  Grid.cpp  Grid.h  GridEntity.h  GridTile.h  Player.cpp  Player.h  Timer.cpp  Timer.h
src/Game/Commands/: Command.h  CommandQueue.cpp  CommandQueue.h  InputManager.cpp  InputManager.h  MovementCommands.h
src/Platformer/: PlatformTile.cpp  Platformer.cpp  Platformer.h  PlatformerConstants.h  Player.h
src/Snake/: Player.cpp  Snake.cpp  Snake.h
src/Snake/Commands/: InputManager.h
tests/: EventTest.cpp  GridCoordinateSystemTest.cpp  Vec2Test.cpp
